--- a/index.html
+++ b/index.html
@@ -1,21 +1,5 @@
 ---
-layout: default
+layout: start
 title: "Home Page"
+permalink: index
 ---
-
-<section>
-  <p>
-    <strong>Me</strong>: Informatik Student mit einigen Jahren Berufserfahrung in kleinen & großen Projekten -
-    großteils native App-Entwicklung. <br />
-  </p>
-
-  <p>
-    <strong>TODO</strong>: Für rundum technisch betreute Mobile- oder Web-Solutions schick mir eine Email!
-  </p>
-
-  <p>
-    <strong>Primary</strong>: Android & iOS Entwickler <br />
-    <strong>Secondary</strong>: Web, PHP, Wordpress & Mehr <br />
-    <strong>Tertiary</strong>: Designing & Creative
-  </p>
-</section>
